feat: implement JWT auth with access/refresh tokens, token rotation and update swagger
